--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "pgn-traits"
 version = "0.1.0"
 authors = ["Morten Lohne <lohnemorten@gmail.com>"]
 edition = "2018"
+description = "Traits for chess variations that can be annotated with Portable Game Notation"
+repository = "https://github.com/MortenLohne/pgn-traits"
+readme = "README.md"
+license = "MIT"
 
 [dependencies]
 board-game-traits = "0.1.0"
